the AI is fucking stupid and doesnt follow any plans and does shit stuff sorry for crashing out alright